# intent-recognizer-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
data/: intent-recognizer.ini  sample.json
inc/: IJsonParser.h  IntentRecognizer.h  JsonParserFactory.h  LoggerHelper.h
json-parser/: CMakeLists.txt  JsonParserFactory.cpp  QtJsonParser.cpp  QtJsonParser.h
json-parser/unit-tests/: Test_QtJsonParser.cpp
libs/intent-recognizer/: CMakeLists.txt  IntentRecognizer.cpp
libs/intent-recognizer/unit-tests/: CMakeLists.txt  Test_IntentRecognizer.cpp
libs/json-parser/: CMakeLists.txt  JsonParserFactory.cpp  QtJsonParser.cpp  QtJsonParser.h
libs/json-parser/unit-tests/: CMakeLists.txt  Test_QtJsonParser.cpp
src/: CMakeLists.txt  IntentRecognizer.cpp  IntentRecognizer.h  main.cpp
